Added tests to appointment booking. Added datetime of the appointment in the domain. Added foreign key contrains on foreign keys on each table.